Updated the conda environment from pr suggestions

--- a/environment.yml
+++ b/environment.yml
@@ -14,9 +14,7 @@ dependencies:
   - requests
   - seaborn
   - pip
+  - ipython
+  - notebook
   # R packages:
-  - r-base=4.2.2
-  - r-tidyr
-  - r-dplyr
-  - r-readr
-  - r-ggplot2
+  - r-essentials
