--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 1.train_models/classify_genotypes/data/nf1_model_pre_evaluation_results.parquet filter=lfs diff=lfs merge=lfs -text
 2.evaluate_models/log_reg_plates_3_3p_5_cp_norm_data/model_eval_data/plate_precision_recall.parquet filter=lfs diff=lfs merge=lfs -text
 2.evaluate_models/classify_genotypes/model_evaluation_data/precision_recall.parquet filter=lfs diff=lfs merge=lfs -text
+2.evaluate_models/classify_genotypes/genotype_probabilites/plate_4_sirna_single_cell_probabilities.parquet filter=lfs diff=lfs merge=lfs -text
