--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ install_pgks.sh
 __pycache__/
 !/**/utils/*.py
 .DS_Store
+
+# ignore single-cell crop images for main figure 4 (too many files)
+4.figures/main_figure_4/sc_crops/
